# tei-manager

./: .gitignore  .justfile.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  TEI_MANAGER_IMPROVEMENTS.md  TEI_MANAGER_ISSUES.md  bench-multiplexer.sh  build.rs  clippy.toml  codecov.yml  deny.toml  justfile  release-please-config.json  release.sh  release.toml  test-e2e.sh
.bench-baseline/: commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
benches/: README.md  embedding.rs  multiplexer_overhead.rs  pool.rs  registry.rs
benchmarks/: README.md  hf_embedding_bench.py
benchmarks/results/: hf_embedding_bench.csv  hf_embedding_bench.json  hf_embedding_bench.md
config/: tei-manager.example.toml  tei-manager.toml
docs/: AUTH_ARCHITECTURE.md  DEPLOYMENT.md  GRPC_MULTIPLEXER.md  MTLS.md  RUNPOD_DEPLOYMENT.md  RUST_CLIENT.md
docs/refactor/: SECURITY_OPTIONS.md  test-e2e.sh
proto/: README.md
proto/tei_multiplexer/v1/: multiplexer.proto
scripts/: bench.sh  build-all-variants.sh  raw-gpu-test.py  setup-test-binary.sh  update-readme-version.sh
src/: config.rs  error.rs  gpu.rs  health.rs  instance.rs  lib.rs  main.rs  metrics.rs  registry.rs  state.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/auth/: mod.rs  mtls.rs  service.rs
src/grpc/: mod.rs  multiplexer.rs  pool.rs  server.rs
src/models/: cache.rs  download.rs  loader.rs  metadata.rs  mod.rs  registry.rs
tests/: e2e_dense.rs  e2e_multiplexer.rs  e2e_smoke.rs  e2e_sparse.rs  integration.rs  mock-tei-router  model_registry.rs  property_tests.rs
tests/e2e/: common.rs  mod.rs
