[package]
name = "tei-manager"
version = "0.4.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
description = "Dynamic TEI (Text Embeddings Inference) instance manager"
repository = "https://github.com/nazq/tei-manager"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "process", "sync", "time", "fs", "io-util"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Process management
nix = { version = "0.30", features = ["signal"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# gRPC client for health checks and TEI communication
tonic = { version = "0.14", features = ["transport", "tls-ring", "gzip"] }
tonic-prost = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
tokio-stream = { version = "0.1", features = ["sync"] }

# Apache Arrow for efficient batching
arrow = "57"
arrow-ipc = { version = "56", features = ["lz4"] }
arrow-schema = "56"
async-stream = "0.3"
hyper-rustls = "0.27" # For tonic TLS support

# Async trait support
async-trait = "0.1"
dashmap = "6"

# Certificate parsing for mTLS
x509-parser = "0.18"
urlencoding = "2.1"

# Native TLS support
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26"

[build]
incremental = true

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
tonic-build = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio-test = "0.4"
axum-test = "18.2"
http-body-util = "0.1"
serial_test = "3.2"
futures = "0.3"

[lib]
name = "tei_manager"
path = "src/lib.rs"

[[bin]]
name = "tei-manager"
path = "src/main.rs"

[[bin]]
name = "bench-client"
path = "src/bin/bench-client.rs"

[[bench]]
name = "multiplexer_overhead"
harness = false
